ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /hostname
            backend:
              service:
                name: nginx-svc-pvc
                port:
                  number: 80
